<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="115dp"
                android:src="@drawable/llogo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cotoris"
            android:text="@string/room_reservation"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="45sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cotorisbold"
                android:text="@string/hash"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/customer_id"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ids"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cotorisbold"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>



        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/full_name"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/names"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cotorisbold"
                android:singleLine="true"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cotorisbold"
                android:text="@string/room_type"
                android:layout_marginEnd="20dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinnerr"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                />

        </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/number_of_days"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dayss"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cotorisbold"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cotorisbold"
                android:text="@string/total_price"
                android:layout_marginEnd="20dp"
                android:textColor="@color/black"
                android:textSize="20sp" />


                <TextView
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cotorisbold"
                    android:singleLine="true"
                    android:textColor="@color/black" />



        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/calculate"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/maroon"
                    android:fontFamily="@font/cotorisbold"
                    android:text="@string/calculate"
                    app:cornerRadius="10dp" />


                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/add"
                        android:layout_width="115dp"
                        android:layout_height="50dp"
                        android:backgroundTint="@color/teal"
                        android:layout_marginEnd="10dp"
                        android:fontFamily="@font/cotorisbold"
                        android:text="@string/insert"
                        app:cornerRadius="10dp" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/update"
                    android:layout_width="115dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/teal"
                    android:fontFamily="@font/cotorisbold"
                    android:text="@string/update"
                    app:cornerRadius="10dp" />


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/view"
                        android:layout_width="115dp"
                        android:layout_height="50dp"
                        android:backgroundTint="@color/teal"
                        android:fontFamily="@font/cotorisbold"
                        android:text="@string/view"
                        app:cornerRadius="10dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal">


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/delete"
                    android:layout_width="115dp"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/teal"
                    android:fontFamily="@font/cotorisbold"
                    android:layout_marginEnd="10dp"
                    android:text="@string/delete"
                    app:cornerRadius="10dp" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/clear"
                    android:layout_width="115dp"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/teal"
                    android:fontFamily="@font/cotorisbold"
                    android:text="@string/clear"
                    app:cornerRadius="10dp" />
            </LinearLayout>

            </LinearLayout>

        </FrameLayout>
    </LinearLayout>
</ScrollView>